# mycpp

./: CMakeLists.txt  README.md  main.cpp
WxGui/: CMakeLists.txt  MainWindow.glade  WxGui_global.h  dlg_login.cpp  dlg_login.glade  dlg_login.h  dlg_paramset.cpp  dlg_paramset.glade  dlg_paramset.h  gladerec.xml  mainwindow.cpp  mainwindow.h
dnn/: facedect.cpp  facedect.h
